--- a/angular_app/angular.json
+++ b/angular_app/angular.json
@@ -99,6 +99,13 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2,
+            "browserTarget": "angular_app:build:production"
+          }
         }
       }
     }
