--- a/angular_app/package.json
+++ b/angular_app/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.1.0",
     "angular-in-memory-web-api": "^0.16.0",
     "firebase": "^9.23.0",
+    "firebaseui": "^6.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
