--- a/angular_app/.prettierrc
+++ b/angular_app/.prettierrc
@@ -10,6 +10,13 @@
                 "tabWidth": 2,
                 "parser": "angular"
             }
+        },
+        {
+            "files": "**/*.scss",
+            "options": {
+                "tabWidth": 2
+                
+            }
         }
     ]
 }
