--- a/.github/workflows/push_github.yml
+++ b/.github/workflows/push_github.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Push Origin
 
 on:
   push:
@@ -23,5 +23,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run Tests
+        env:
+          DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
+          DATABASE_USER: ${{ secrets.DATABASE_USER }}
+          DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+          DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+          DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
+          DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
         run: |
           python manage.py test
