--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,17 +23,26 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+         env:
+          DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
+          DATABASE_USER: ${{ secrets.DATABASE_USER }}
+          DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+          DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
+          DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
+          DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
 
       # Angularのビルド
       - name: Build Angular
         run: |
-          cd angular_project_directory
+          cd angular_app_sourse
           npm install
           ng build
 
       # 静的ファイルの収集
       - name: Collect static files
-        run: python manage.py collectstatic --noinput
+        run: |
+          cd ../
+          python manage.py collectstatic --noinput
 
       # App Engineへのデプロイ
       - name: Deploy to App Engine
@@ -43,3 +52,4 @@ jobs:
 
     # 必要に応じて環境変数や秘密情報を設定
     # secretsはGitHubリポジトリのSettings > Secretsで設定
+
