--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,12 +7,13 @@ on:
 
 jobs:
   build:
+  # 実行環境の指定
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
         python-version: [3.11]
-
+# python環境のインストール
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -23,6 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          # DB設定のインポート
         env:
           DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
           DATABASE_USER: ${{ secrets.DATABASE_USER }}
@@ -32,13 +34,15 @@ jobs:
           DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
 
       # Angularのビルド
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
       - name: Build Angular
         run: |
           cd angular_app_sourse
           npm install
           ng build
 
-      # 静的ファイルの収集
+# 静的ファイルの収集
       - name: Collect static files
         run: |
           cd ../
@@ -47,8 +51,3 @@ jobs:
       # App Engineへのデプロイ
       - name: Deploy to App Engine
         run: gcloud app deploy
-        env:
-          GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
-
-    # 必要に応じて環境変数や秘密情報を設定
-    # secretsはGitHubリポジトリのSettings > Secretsで設定
