--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,15 +24,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          # DB設定のインポート
-        # env:
-        #   DATABASE_NAME: ${{ secrets.DATABASE_NAME }}
-        #   DATABASE_USER: ${{ secrets.DATABASE_USER }}
-        #   DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-        #   DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
-        #   DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
-        #   DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
-
       # Angularのビルド
       - name: Install Angular CLI
         run: npm install -g @angular/cli
@@ -48,16 +39,42 @@ jobs:
           ls
           python manage.py collectstatic --noinput
 
-      - name: Create .env
+      - name: Create app.yaml
         run: |
-          echo "runtime: python39" > .env
-          echo "env_variables:" >> .env
-          echo "DATABASE_NAME: ${{ secrets.DATABASE_NAME }}" >> .env
-          echo "DATABASE_USER: ${{ secrets.DATABASE_USER }}" >> .env
-          echo "DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}" >> .env
-          echo "DATABASE_HOST: ${{ secrets.DATABASE_HOST }}" >> .env
-          echo "DATABASE_PORT: ${{ secrets.DATABASE_PORT }}" >> .env
-          echo "DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}" >> .env
+          echo 'service: default' > app.yaml
+          echo 'runtime: python311' >> app.yaml
+          echo 'env_variables:' >> app.yaml
+          echo "  MODE: production" >> app.yaml
+          echo "  DATABASE_NAME: ${{ secrets.DATABASE_NAME }}" >> app.yaml
+          echo "  DATABASE_USER: ${{ secrets.DATABASE_USER }}" >> app.yaml
+          echo "  DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}" >> app.yaml
+          echo "  DATABASE_HOST: ${{ secrets.DATABASE_HOST }}" >> app.yaml
+          echo "  DATABASE_PORT: ${{ secrets.DATABASE_PORT }}" >> app.yaml
+          echo "  DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}" >> app.yaml
+
+          echo 'instance_class: F1' >> app.yaml
+
+          echo 'handlers:' >> app.yaml
+          echo '- url: /static' >> app.yaml
+          echo '  static_dir: static/' >> app.yaml
+
+          echo '- url: /.*' >> app.yaml
+          echo '  script: auto' >> app.yaml
+          echo 'entrypoint: gunicorn -b :$PORT zerosence.wsgi' >> app.yaml
+
+          echo 'inbound_services:' >> app.yaml
+          echo '- warmup' >> app.yaml
+          echo 'automatic_scaling:' >> app.yaml
+          echo '  target_cpu_utilization: 0.8' >> app.yaml
+          echo '  target_throughput_utilization: 0.8' >> app.yaml
+
+
+    - name: Deploy to App Engine
+      run: |
+        gcloud app deploy app.yaml -q
+      env:
+        GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
+
 
       # GCPキーを作成
       - name: Auth with Google Cloud
