--- a/.gcloudignore
+++ b/.gcloudignore
@@ -14,31 +14,31 @@
 
 #
 
-.gcloudignore
+# Python pycache:
+
+
+
+# Ignored by the build system
 
 # If you would like to upload your .git directory, .gitignore file or files
 
 # from your .gitignore file, remove the corresponding line
 
 # below:
-
+.gcloudignore
 .git
 .gitignore
-
-# Python pycache:
-
 **pycache**/
 
-# Ignored by the build system
 
 /setup.cfg
 
-clrome
+chrome
 
 .env
 .vscode
 
-angular_app_sourse/
+angular/
 y/
 UML/
 out/
