--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build Angular
         run: |
-          cd angular_app_sourse
+          cd angular
           npm install
           ng build
 
