--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: DEPLOY
+    environment: DEPLOY # 重要　環境名を書く
     strategy:
       max-parallel: 4
       matrix:
