--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Auth with Google Cloud
         run: |
-          echo "${{ secrets.GCLOUD_AUTH }}" > gcloud.json
+          echo toJson("${{ secrets.GCLOUD_AUTH }}") > gcloud.json
           echo "${{ secrets.GCLOUD_AUTH }}"
           gcloud auth activate-service-account --key-file=gcloud.json
 
