--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,7 @@ jobs:
 
       - name: Create app.yaml
         run: |
+          set -x
           echo 'service: default' > app.yaml
           echo 'runtime: python311' >> app.yaml
           echo 'env_variables:' >> app.yaml
@@ -76,7 +77,7 @@ jobs:
         run: |
           echo "$GCLOUD_AUTH" > gcloud.json
           gcloud auth activate-service-account --key-file=gcloud.json
-          
+
       - name: Deploy to App Engine
         run: gcloud app deploy app.yaml -q
         env:
